cmake_minimum_required(VERSION 3.6)
project(src)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    bsd/apm.c
    bsd/dummy.c
    bsd/kernel_routes.c
    bsd/net.c
    cfgparser/cfgfile_gen.c
    cfgparser/olsrd_conf.c
    cfgparser/olsrd_conf.h
    common/autobuf.c
    common/autobuf.h
    common/avl.c
    common/avl.h
    common/list.c
    common/list.h
    linux/apm.c
    linux/kernel_routes_nl.c
    linux/kernel_tunnel.c
    linux/lq_plugin_ffeth_nl80211.c
    linux/lq_plugin_ffeth_nl80211.h
    linux/net.c
    linux/nl80211_link_info.c
    linux/nl80211_link_info.h
    olsr_switch/commands.h
    olsr_switch/link_rules.c
    olsr_switch/link_rules.h
    olsr_switch/main.c
    olsr_switch/ohs_cmd.c
    olsr_switch/ohs_cmd.h
    olsr_switch/olsr_host_switch.h
    unix/ifnet.c
    unix/log.c
    unix/misc.c
    win32/arpa/inet.h
    win32/ce/ws2tcpip.h
    win32/compat/sys/time.h
    win32/net/if.h
    win32/net/route.h
    win32/netinet/in.h
    win32/sys/ioctl.h
    win32/sys/socket.h
    win32/sys/times.h
    win32/sys/utsname.h
    win32/apm.c
    win32/compat.c
    win32/compat.h
    win32/dlfcn.h
    win32/dummy.c
    win32/ifnet.c
    win32/kernel_routes.c
    win32/log.c
    win32/misc.c
    win32/net.c
    win32/unistd.h
    apm.h
    build_msg.c
    build_msg.h
    builddata.h
    cli.c
    cli.h
    defs.h
    duplicate_handler.c
    duplicate_handler.h
    duplicate_set.c
    duplicate_set.h
    egressFile.c
    egressFile.h
    egressTypes.h
    fpm.c
    fpm.h
    gateway.c
    gateway.h
    gateway_costs.c
    gateway_costs.h
    gateway_default_handler.c
    gateway_default_handler.h
    gateway_list.c
    gateway_list.h
    generate_msg.c
    generate_msg.h
    hashing.c
    hashing.h
    hna_set.c
    hna_set.h
    hysteresis.c
    hysteresis.h
    ifnet.h
    interfaces.c
    interfaces.h
    ipc_frontend.c
    ipc_frontend.h
    ipcalc.c
    ipcalc.h
    kernel_routes.h
    kernel_tunnel.h
    link_set.c
    link_set.h
    lock_file.c
    lock_file.h
    log.h
    lq_mpr.c
    lq_mpr.h
    lq_packet.c
    lq_packet.h
    lq_plugin.c
    lq_plugin.h
    lq_plugin_default_ff.c
    lq_plugin_default_ff.h
    lq_plugin_default_ffeth.c
    lq_plugin_default_ffeth.h
    lq_plugin_default_float.c
    lq_plugin_default_float.h
    lq_plugin_default_fpm.c
    lq_plugin_default_fpm.h
    main.c
    mantissa.c
    mantissa.h
    mid_set.c
    mid_set.h
    misc.h
    mpr.c
    mpr.h
    mpr_selector_set.c
    mpr_selector_set.h
    neighbor_table.c
    neighbor_table.h
    net_olsr.c
    net_olsr.h
    net_os.h
    olsr.c
    olsr.h
    olsr_cfg.h
    olsr_cookie.c
    olsr_cookie.h
    olsr_niit.c
    olsr_niit.h
    olsr_protocol.h
    olsr_random.h
    olsr_spf.c
    olsr_spf.h
    olsr_types.h
    olsrd_plugin.h
    packet.c
    packet.h
    parser.c
    parser.h
    pid_file.c
    pid_file.h
    plugin_loader.c
    plugin_loader.h
    plugin_util.c
    plugin_util.h
    process_package.c
    process_package.h
    process_routes.c
    process_routes.h
    rebuild_packet.c
    rebuild_packet.h
    routing_table.c
    routing_table.h
    scheduler.c
    scheduler.h
    tc_set.c
    tc_set.h
    two_hop_neighbor_table.c
    two_hop_neighbor_table.h logger.c logger.h)

add_executable(src ${SOURCE_FILES})